# xOverlay

./: Cargo.toml  LICENSE  README.md
performance/random_test/: Cargo.toml
performance/random_test/src/: main.rs
performance/random_test/src/app/: mod.rs  test_0.rs  test_0_i_overlay.rs  test_0_x_overlay.rs  util.rs
performance/rust_app/: Cargo.toml
performance/rust_app/src/: main.rs
performance/rust_app/src/test/: mod.rs  test_0_checkerboard.rs  test_1_not_overlap.rs  test_2_lines_net.rs  test_3_wind_mill.rs  test_4_windows.rs  test_5_nested_squares.rs
src/: lib.rs
src/bind/: segment.rs  solver.rs
src/core/: fill.rs  graph.rs  layout.rs  link.rs  mod.rs  options.rs  overlay.rs  shape_type.rs  solver.rs  winding.rs
src/geom/: id_point.rs  mod.rs  segm.rs  x_seg.rs
src/graph/: build.rs  column.rs  end.rs  extract.rs  mod.rs  nearest_vector.rs  node.rs
src/graph/boolean/: overlay_rule.rs  winding_count.rs
src/ortho/: boolean.rs  boolean_build.rs  column.rs  column_fill.rs  column_links.rs  column_split.rs  error.rs  mod.rs  overlay.rs  segm.rs  segment.rs
src/ortho/boolean/: graph.rs  init.rs  mod.rs  overlay.rs  segment.rs
src/ortho/column/: fill.rs  mod.rs  split.rs
src/sub/: merge.rs
xOverlay/: Cargo.toml  README.md
xOverlay/src/: lib.rs
xOverlay/src/bind/: mod.rs
xOverlay/src/core/: direction.rs  fill.rs  layout.rs  mod.rs  options.rs  overlay.rs  overlay_rule.rs  solver.rs  winding.rs
xOverlay/src/gear/: count_buffer.rs  fill.rs  fill_buffer.rs  fill_source.rs  filter.rs  graph.rs  init.rs  merge.rs  mod.rs  process.rs  s_layout.rs  s_mapper.rs  section.rs  seg_iter.rs  segment.rs  source.rs  split.rs  split_buffer.rs  sub_graph.rs  winding_count.rs  x_layout.rs  x_mapper.rs  y_layout.rs  y_mapper.rs
xOverlay/src/geom/: diagonal.rs  mod.rs  range.rs  v_segment.rs
xOverlay/src/graph/: build.rs  column.rs  end.rs  link.rs  mod.rs
xOverlay/src/graph/boolean/: fill_rule.rs  mod.rs  overlay_rule.rs  winding_count.rs
xOverlay/src/ortho/: error.rs  mapper.rs  mark.rs  mod.rs  orientation.rs  overlay.rs  segment.rs
xOverlay/src/ortho/boolean/: graph.rs  init.rs  mod.rs  overlay.rs
xOverlay/src/ortho/column/: fill.rs  filter.rs  split.rs
xOverlay/src/ortho/section/: fill.rs  filter.rs  graph.rs  sort.rs  split.rs
xOverlay/src/sub/: bin.rs  merge.rs  mod.rs  seg_iter.rs
xOverlay/src/util/: log2.rs  mod.rs
