[package]
name = "x_overlay"
version = "0.1.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "Boolean Operations for 45 degrees geometry"
license = "MIT"
repository = "https://github.com/iShape-Rust/xOverlay"
readme = "README.md"

[dependencies]
i_float = { version = "~1.9.0" }
i_shape = { version = "~1.9.0" }
i_tree = { version = "~0.12.0" }
i_key_sort = { version = "~0.4.0" }

#i_float = { path = "../iFloat" }
#i_shape = { path = "../iShape" }
#i_tree = { path = "../iTree" }
#i_key_sort = { path = "../iKeySort" }


[dependencies.rayon]
version = "^1.10"

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rand = { version = "^0.8.5", features = [] }
