[package]
name = "x_overlay"
version = "0.1.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "Boolean Operations for 45 degrees geometry"
license = "MIT"
repository = "https://github.com/iShape-Rust/xOverlay"
readme = "README.md"

[dependencies]
i_float = "~1.15.0"
i_shape = "~1.14.0"
i_key_sort = "~0.6.0"
rayon = { version = "^1.11" }

#i_float = { path = "../iFloat" }
#i_shape = { path = "../iShape" }

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rand = { version = "^0.8.5", features = [] }
