[package]
name = "random_test"
version = "0.1.0"
edition = "2024"


[dependencies]

rayon = { optional = true, version = "^1.11" }
#i_float = { path = "../iFloat" }
#i_shape = { path = "../iShape" }
i_overlay = { path = "../../../iOverlay/iOverlay" }
x_overlay = { path = "../../xOverlay" }
rand = { version = "^0.9.2", features = [] }